# libelstr

./: meson.build
include/: elstr.h  elstr_cpp.h
src/: elstr.c  meson.build
tests/: meson.build  test-1.c  test-cpp-1.cpp  test-cpp-2.cpp
